[package]
name = "shp_vis_bevy"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.15"
shapefile = "0.6.0"
rayon = "1.10.0"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3